tests/compile-fail/integration__integration__type_check__stackless__neg_str.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:16
   │
27 │       int x = -"abc";  
   │               -^^^^^ a string
   │               │ 
   │               requires a numeric type


